--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Chengmy Website"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CMY</title>
+    <title>three.js例子</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
